<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomORG">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/true_random_number_generator"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/min"
        app:layout_constraintBaseline_toBaselineOf="@+id/MinNumberDecimal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        app:layout_constraintBaseline_toBaselineOf="@+id/MaxNumberDecimal"
        app:layout_constraintStart_toStartOf="@+id/Min" />

    <EditText
        android:id="@+id/MinNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="numberDecimal"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        app:layout_constraintEnd_toEndOf="@+id/MaxNumberDecimal"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/MaxNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/_100"
        android:inputType="numberDecimal"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/MinNumberDecimal" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="Min,Max" />

    <Button
        android:id="@+id/button"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/generate_button"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="@+id/MaxNumberDecimal"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/Max"
        app:layout_constraintTop_toBottomOf="@+id/MaxNumberDecimal" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AnswerBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#A2A5CC"
        app:layout_constraintEnd_toEndOf="@+id/MaxNumberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Result"
        app:layout_constraintTop_toBottomOf="@+id/Result" />

</androidx.constraintlayout.widget.ConstraintLayout>
