<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_instagram"
    tools:context=".Instagram">

    <EditText
        android:id="@+id/txtNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="#40FFFFFF"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/username"
        android:textColor="#90FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/txtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"

        android:background="#40FFFFFF"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/password"
        android:textColor="#90FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameSignUp"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/txtConfirmPassWord"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#40FFFFFF"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#90FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Forgot your login details? Get help signing in."
        android:textColor="#90FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpButton" />

    <TextView
        android:id="@+id/dashLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="#30FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_in_with_facebook"
        android:textColor="#90FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/dashLine"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="@+id/dashLine"
        app:layout_constraintTop_toBottomOf="@+id/dashLine" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_instagram_button"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/log_in_ins"
        android:textColor="#90FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassWord" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:srcCompat="@drawable/instagram_wordmark_white_dark_background_logo_wine" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginEnd="6dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/facebook_icon" />

    <TextView
        android:id="@+id/footerSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#40FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/have_an_account_sign_in"
        android:textColor="#90FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>